# MediaPlayer

./: build.sh  build_android.sh  build_android_all.sh  build_fdkaac.sh  build_with_x264.sh  build_x264.sh  config.sh  git及github.docx  git命令使用总结.docx  main.rar  网址.txt
Android C++ OpenGL 教程【248894】EGL环境搭建/课件/: 4、EGL环境搭建.pptx
Android C++ OpenGL 教程【248898】EGL和OpenGL的关系/课件/: 2、EGL和OpenGL的关系.pptx
Android C++ OpenGL 教程【251200】创建C++项目并导入OpenGL相关库/课件/: 3、创建C++项目并导入OpenGL相关库.pptx
Android C++ OpenGL 教程【251201】EGL线程-绘制方法回调/课件/: 7、EGL线程-绘制方法回调.pptx
Android C++ OpenGL 教程【264426】渲染YUV视频数据/课件/: 渲染YUV视频数据.pptx
MyMusic/: settings.gradle
MyMusic/app/: build.gradle
MyMusic/app/src/main/: AndroidManifest.xml
MyMusic/app/src/main/res/layout/: activity_main.xml
MyMusic/gradle/wrapper/: gradle-wrapper.properties
MyMusic/myplayer/: build.gradle
MyMusic/myplayer/src/main/: AndroidManifest.xml
MyMusic/myplayer/src/main/cpp/: CMakeLists.txt  JavaListener.cpp  JavaListener.h  WlAudio.cpp  WlAudio.h  WlCallJava.cpp  WlCallJava.h  WlFFmpeg.cpp  WlFFmpeg.h  WlPlaystatus.cpp  WlPlaystatus.h  WlQueue.cpp  WlQueue.h  WlVideo.cpp  WlVideo.h  androidLog.h  native-lib.cpp
RmCamera/: settings.gradle
RmCamera/app/: build.gradle
RmCamera/app/src/main/: AndroidManifest.xml
RmCamera/app/src/main/cpp/: native-lib.cpp
RmCamera/app/src/main/res/layout/: activity_main.xml
RmCamera/app/src/main/res/values/: strings.xml
RmCamera/gradle/wrapper/: gradle-wrapper.properties
RmFFmpegVideo/app/src/main/res/values/: strings.xml
RmFFmpegVideo/ffmpegencodec/: build.gradle
RmFFmpegVideo/ffmpegencodec/src/main/cpp/: CMakeLists.txt  jx_log.cpp  native-lib.cpp
RmFFmpegVideo/gradle/wrapper/: gradle-wrapper.properties
WlLivePusher/: settings.gradle
WlLivePusher/app/: build.gradle
WlLivePusher/app/src/main/: AndroidManifest.xml
WlLivePusher/app/src/main/cpp/: AndroidLog.h  CMakeLists.txt  MyAudio.cpp  MyAudio.h  RecordBuffer.cpp  RecordBuffer.h  RtmpPush.cpp  RtmpPush.h  WlCallJava.cpp  WlCallJava.h  WlQueue.cpp  WlQueue.h  native-lib.cpp  wlpush.cpp
WlLivePusher/app/src/main/res/drawable/: btn_left_round_rect.xml  setting_bg_white.xml
WlLivePusher/app/src/main/res/layout/: activity_livepush.xml  activity_main.xml  activity_yuv.xml  more_dialog.xml
WlLivePusher/app/src/main/res/values/: colors.xml  styles.xml
WlLivePusher2/app/src/main/: AndroidManifest.xml
WlLivePusher2/app/src/main/cpp/: CMakeLists.txt
WlLivePusher2/app/src/main/res/drawable/: btn_midd_round_rect.xml  btn_right_round_rect.xml
WlLivePusher2/app/src/main/res/layout/: activity_camera.xml  activity_imagevideo.xml  activity_main.xml  activity_video.xml
WlLivePusher2/app/src/main/res/values/: styles.xml
WlLivePusher2/gradle/wrapper/: gradle-wrapper.properties
android/lib/: libfdk-aac.la
android/lib/pkgconfig/: fdk-aac.pc
armeabi-v7a/lib/pkgconfig/: libavdevice.pc  libswresample.pc
fdk-aac-7-1/: config.sh
ffmpeg-3.3.9/: build_android.sh  build_my.sh  build_one.sh  config.asm  config.fate  config.h  config.mak  configure  ffmpeg_android_build.sh
ffmpeg-3.3.9/android/armeabi-v7a/lib/pkgconfig/: libavformat.pc  libavutil.pc  libpostproc.pc  libswscale.pc
ffmpeg-3.3.9/android_all/arm64/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
ffmpeg-3.3.9/android_all/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
ffmpeg-3.3.9/android_all/armeabi/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
ffmpeg-3.3.9/android_all/x86/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
ffmpeg-3.3.9/android_all/x86_64/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
ffmpeg-3.3.9/androidlib/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
ffmpeg-3.3.9/doc/: config.texi
ffmpeg-3.3.9/doc/examples/pc-uninstalled/: libavcodec-uninstalled.pc  libavdevice-uninstalled.pc  libavfilter-uninstalled.pc  libavformat-uninstalled.pc
ffmpeg-3.3.9/libavcodec/: libavcodec.pc  libx264.d
ffmpeg-3.3.9/libavfilter/: libavfilter.pc
ffmpeg-3.3.9/libx264/include/: x264_config.h
ffmpeg222/RmFFmpegVideo/: settings.gradle
ffmpeg222/RmFFmpegVideo/app/: build.gradle
ffmpeg222/RmFFmpegVideo/app/src/main/: AndroidManifest.xml
ffmpeg222/RmFFmpegVideo/app/src/main/res/layout/: activity_main.xml  activity_main_native.xml  activity_media_recorder.xml
ffmpeg222/RmFFmpegVideo/app/src/main/res/values/: colors.xml
ffmpeg222/RmFFmpegVideo/ffmpegencodec/src/main/: AndroidManifest.xml
ffmpeg222/RmFFmpegVideo/ffmpegencodec/src/main/cpp/: CMakeLists.txt  base_include.h  cmdutils.h  ffmpeg.c  jx_ffmpeg_cmd_run.c  jx_ffmpeg_cmd_run.h  jx_jni_handler.h  jx_log.h  jx_media_muxer.cpp  jx_user_arguments.h  native-lib.cpp
libx264/lib/pkgconfig/: x264.pc
libyuv/: build.gradle
libyuv/src/androidTest/java/com/libyuv/: ExampleInstrumentedTest.java
libyuv/src/test/java/com/libyuv/: ExampleUnitTest.java
utils/: build.gradle
utils/src/main/: AndroidManifest.xml
utils/src/main/java/com/rh/camera/: CameraProxy.java
utils/src/main/java/com/rh/utilslib/: UtilsLib.java
utils/src/main/res/anim/: glide_math_out.xml
(+154 files in other folders)
